Fixed material issue

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
   <!-- <link type="text/css" rel="stylesheet" href="./themes/material-icons.css" >  -->
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 </head>
-<body id="root-app-container" class="">
+<body id="root-app-container" class=" mat-typography">
   <app-root>Loading...</app-root>
 </body>
 </html>
